--- a/_posts/2019-08-03-工作遇到的问题小结.md
+++ b/_posts/2019-08-03-工作遇到的问题小结.md
@@ -702,21 +702,375 @@ let loginInfo = this.getLocalValue("loginInfo");
 
 ## 第四周 实习经验分享
 
-### 1.有关块级元素包裹块级元素，在下方出现的间隙
+### 1.间隙问题
 
-（div包裹div，div包裹img）都是块级包块级常见的情况，导致这个的原因：
+①上下间隙
 
-​	内联元素的默认垂直**对齐方式是和基线对齐**（vertical-align：baseline），并不是和底部对齐，以及**父级元素默认的行高**问题。
+​	有关块级元素包裹块级元素，在下方出现的间隙（div包裹div，div包裹img）都是块级包块级常见的情况，导致这个的原因：内联元素的默认垂直**对齐方式是和基线对齐**（vertical-align：baseline），并不是和底部对齐，以及**父级元素默认的行高**问题。
 
-​	暴力解决：1.浮动（可能导致父元素塌陷的问题，注意父级元素清除浮动）2.转化为块级元素　3.定位（使用定位时脱离文档流，注意父元素塌陷，定位完全脱离父元素，清除浮动没用）　
+暴力解决：
 
-​	本质解决：1.修改父级元素：line-height:0；2.修改父级元素：font-size:0;　3.修改内联元素：vertical-align：根据需求可以改为middle、top、bottom、text-bottom等值，这种方式解决空隙问题比较好；     
+​	**1.浮动**（可能导致父元素塌陷的问题，注意父级元素清除浮动）
 
-有关多张图片连着排列的间隙问题：浏览器把两个img标签之间的空格当成了空白节点。解决方案：1.多个img标签写在一行 2.在img标签的父级上写：font-size:0;3.使用display：block(img是内联元素)//要float一下才行4.使用letter-spacing属性，在父级上面设置style="letter-spacing:-800px"<!--letter-spacing的值无论是负多少都不会产生重叠-->
+​	**2.转化为块级元素**　
+
+​	**3.定位**（使用定位时脱离文档流，注意父元素塌陷，定位完全脱离父元素，清除浮动没用）　
+
+本质解决：
+
+​	**1.修改父级元素行高**：line-height:0；
+
+​	**2.修改父级元素字体大小**：font-size:0;　
+
+​	**3.修改内联元素对齐方式**：vertical-align：根据需求可以改为middle、top、bottom、text-bottom等值（这种方式解决空隙问题比较好）；     
+
+②左右间隙
+
+​	有关多张图片连着排列的**（左右）间隙问题**：（浏览器把两个img标签之间的空格当成了空白节点）
+
+**1.多个img标签写在一行**
+
+**2.在img标签的父级上写：font-size:0;**
+
+**3.给每一项添加display：block** 
+
+**4.使用letter-spacing属性**，设置字符间距，在父级上面设置`style="letter-spacing:-800px"`**（letter-spacing的值无论是负多少都不会产生重叠）**
 
 
 
+### 2.`el-form`表单提交及表单数据重置
+
+```html
+  <el-form :model="dataForm" :inline="true" :rules="rules" label-position="left">
+        <el-form-item label="名称" prop="name">
+            <el-input v-model="dataForm.name"></el-input>
+        </el-form-item>
+        <el-form-item label="价格" prop="price">
+            <el-input v-model="dataForm.price"></el-input>
+        </el-form-item>
+        <el-form-item label="数量" prop="num">
+            <el-input v-model="dataForm.num"></el-input>
+        </el-form-item>
+        <el-form-item label="日期" prop="date">
+            <el-input v-model="dataForm.date"></el-input>
+        </el-form-item>
+        <el-button @click="Submit('dataForm')">提 交</el-button>
+        <el-button @click="giveSubmit('dataForm')">取 消</el-button>
+   </el-form>
+```
+
+表单提交的时候，如果点击取消，就需要把内部的数据重置，**流程**：
+
+1.先在`el-form`标签中，用`：model=“dataForm” `将所有的填写的内容保存在里面，
+
+2.然后在取消按钮上面绑定相应的取消方法 ：`<el-button @click="giveSubmit('dataForm')">取 消</el-button> ` ，同时将`dataForm`这个存储值的对象传入，
+
+3.最后在方法中定义： 利用`resetFields();`重置这个里面的数据
+
+```javascript
+giveSubmit(formName) {      
+    this.productDialog = false;   
+    this.$refs[formName].resetFields();    
+}, 
+```
 
 
 
+### 3.el-table 批量删除方法
 
+```javascript
+	delLists() {
+            var ids = this.$refs.multipleTable.selection;
+            var checks = [];
+            if (ids.length === 0) {
+                this.$message.warning("请选择");
+                return false;
+            } else {
+                for (let i in ids) {
+                    checks.push(ids[i].id);
+                }
+                var checkIds = checks.join("%");
+            }
+            this.$confirm("此操作将永久删除项数据, 是否继续?", "提示", {
+                    confirmButtonText: "确定",
+                    cancelButtonText: "取消",
+                    type: "warning"
+                })
+                .then(() => {
+                /*getDel是一个接收checkIds参数来删除的接口*/
+                    getDel(checkIds).then(res => {
+                        if (res.code === "success") {
+                            this.$message({
+                                type: "success",
+                                activity: "删除成功!"
+                            });
+                            /*删除之后，重新获取table展示的数据，对当前页面进行刷新*/
+                            this.getList();
+                        }
+                    });
+                })
+                .catch(() => {
+                    this.$message({
+                        type: "info",
+                        activity: "已取消删除"
+                    });
+                });
+        }
+```
+
+### 4.过滤器filter
+
+#### ①先简单了解一下过滤方法：
+
+`array.filter(function(currentValue,index,arr), thisValue)`  
+
+filter() 方法**创建一个新的数组**，新数组中的元素是通过检查指定数组中**符合条件的所有元素**，如果没有符合条件的元素则返回空数组；**不会对空数组进行检测**；不会改变原始数组。
+
+参数：**当前元素的值**`currentValue`必须；当前元素的**索引值**`index` 可选；当前元素属于的数组对象 `arr` 可选；
+
+ thisValue  可选，表示对象作为该执行回调时使用，传递给函数，**用作 "this" 的值**。如果省略了 thisValue ，"this" 的值为 "undefined"  。      
+
+```javascript
+/*我使用到的场景*/
+res.data.items.filter(value=>{          
+    return value.isTrue===1        
+})
+```
+
+#### ②过滤器可在new Vue实例前注册全局的，也可以在组件上写局部过滤器。
+
+1.**全局过滤器**：
+
+```javascript
+/*过滤器名称global-Filter*/
+Vue.filter('globa-lFilter', function (value) {return value + "000"})
+```
+
+2.**组件过滤器（局部）**：
+
+```javascript
+filters:{
+    componentFilter:function(value){ return value + "111" }
+},
+```
+
+**注意**：全局注册时是`filter`，没有s的。而组件过滤器是`filters`，是有s的，否则过滤器是没有效果的。
+3.在**计算属性中过滤**：
+
+```html
+<li v-for="item in filterlist">{{item}}</li> 
+```
+
+```javascript
+/*list是定义的一个数组*/ 
+computed: {      
+     filterlist () {           
+         return this.list.filter(function (number) {
+                    return number< 4                
+         })            
+     }     
+ },
+```
+
+4.在**`methods`**里面的使用
+
+```html
+<li v-for="item in filterlistFun()">{{item}}</li>
+```
+
+```javascript
+/*list是定义的一个数组*/  		
+methods:{
+    filterlistFun(val){
+         return this.list.filter(function (number) {
+               return number < 4
+         })
+    }
+}
+```
+
+#### ③过滤器的使用方法
+
+1.在双花括号插值` {{ 'ok' | globalFilter }} ` 
+2.在`v-bind`表达式中使用 `<div v-bind:data="'ok' | globalFilter" ></div>`
+
+#### ④过滤器的参数写法
+
+1.**{{ message | filterA | filterB }}**  message是作为参数传给filterA 函数，而filterA 函数的返回值作为参数传给filterB函数，**最终结果显示是由filterB返回的**。调用的时候，只有一个参数。
+2.**{{ message | filterA('arg1', arg2) }}** filterA的第一个参数是message，然后接下来的参数依次是‘arg1’,arg2。调用的时候，有三个参数。
+3.**{{ 'a','b' | filterB }}** 'a'和'b'分别作为参数传给filterB。
+
+过滤器函数始终以表达式的值作为第一个参数。带引号的参数视为字符串，而**不带引号的参数按表达式计算** ；
+
+可以设置两个过滤器参数，前提是这**两个过滤器处理的不冲突**；
+
+
+
+### 5.el-table 的格式化属性
+
+用户从input输入的数据在回传到model之前也可以先处理；
+
+```html
+<el-table-column 
+                 label="状态" 
+                 align="center" 
+                 :formatter="switchCode" 
+                 show-overflow-tooltip></el-table-column>
+```
+
+ 在表格中 有一个`formatter`用来格式化内容 `Function(row, column, cellValue, index) `
+**使用流程：**
+
+1.先在列中定义方法，给它一个方法名，它会自动获取参数；
+
+2.然后再methods里面定义该方法，并传入默认的参数，这里传两个参数，row参数获取了本行的数组
+
+```javascript
+// 订单状态    
+			switchCode(row, column) {
+                    let Status = "";
+                    switch (row.orderStatus) {
+                        case 1:
+                            Status = "已付款";
+                            break;
+                        case 2:
+                            Status = "已发货";
+                            break;
+                        case 3:
+                            Status = "已签收";
+                            break;
+                        case 4:
+                            Status = "取消交易";
+                            break;
+                    }
+                    return Status;
+                }
+```
+
+**注意**：过程中，我将需要返回的Status变量，一开始定义在data中，导致无限循环报错，将要返回的变量局部定义在该函数中即可避免；
+
+### 6.移动端轮播图抖动问题
+
+```css
+overflow：hidden;
+width：100%;
+height：0;
+padding-bottom：31.25%;
+```
+
+`padding-bottom：31.25%;`表示**高度根据宽度相对撑开31.25%**，保证图片的宽高比。
+**注意**：不能将height设置成31.25%，因为height是相对于父级的百分比。
+或者可以写成另一种形式：
+
+```css
+/*高度相对于viewport的宽度；但是可能有兼容性问题*/
+width：100%;
+height：31.25vm;
+```
+
+### 7.模板字面量
+
+1.在模板字面量（反引号）之内的所有空白符都是字符串的一部分，因此需要**特别留意缩进**。　　　
+2.在模板字面量中**使用 \n 来指示换行**的插入位置。
+3.模板字面量看上去仅仅是普通JS字符串的升级版，但二者之间**真正的区别**在于模板字面量的**变量占位符**。
+
+**变量占位符允许将任何有效的JS表达式嵌入到模板字面量中，并将其结果输出为字符串的一部分。**
+变量占位符由起始的` ${` 与结束的` } `来界定，之间允许放入任意的 JS 表达式。
+
+```javascript
+/*之前定义了count=10;price=2.5;*/
+`${count} items cost $${(count * price).toFixed(2)}.`//"10 items cost $2.50."
+```
+
+模板字面量本身也是 JS 表达式，因此**可以将模板字面量嵌入到另一个模板字面量内部** 
+
+```javascript
+`Hello, ${my name is ${ name }}.`
+```
+
+4.模板字面量真正的威力来自于**标签模板**，每个模板标签都可以执行模板字面量上的转换并**返回最终的字符串值**。标签指的是在模板字面量**第一个反引号前方标注的字符串**。
+
+```javascript
+`let message = tag`Hello world`;` 
+```
+
+```javascript
+function tag(literals, ...substitutions) {  /*返回一个字符串*/ }
+```
+
+标签可以是一个函数，调用时传入加工过的模板字面量各部分数据，但必须结合每个部分来创建结果。
+
+**第一个参数是一个数组**，包含Javascript解释过后的字面量字符串，它之后的所有参数都是每一个占位符的解释值。标签函数通常使用不定参数特性来定义占位符，从而简化数据处理的过程。
+
+实例解释：
+
+```javascript
+let count = 10,price = 0.25;
+let message = passthru`${count} items cost $${(count * price).toFixed(2)}.`;
+```
+
+如果有一个名为`passthru()`的函数，那么作为一个模板字面量标签，它会接受**3个参数**：
+首先是**第一个参数**是`literals`数组，包含以下元素：　　
+
+​	1、第一个占位符前的空字符串("")　　
+
+​	2、第一、二个占位符之间的字符串(" items cost $")　　
+
+​	3、第二个占位符后的字符串(".")；
+
+**下一个参数**是变量`count`的解释值，传参为10，它也成为了substitutions数组里的第一个元素；
+
+**最后一个参数**是`(count*price).toFixed(2)`的解释值，传参为2.50，它是substitutions数组里的第二个元素。
+
+**注意**：literals里的第一个元素是一个空字符串，这确保了literals[0]总是字符串的始端，就像literals[literals.length-1]总是字符串的结尾一样。substitutions的数量总比literals少一个，这也意味着表达式substitutions.Iength === literals.Iength-1的结果总为true。
+
+### 8.防抖、节流
+
+防抖、节流` https://segmentfault.com/a/1190000016261602 `这个写的很好，平时键盘抬起就会搜索，防抖后，间隔一段时间不输入才会搜索，节流后，可以做到不管是否停止打字，间隔一段时间都会搜索。
+
+**函数防抖**(debounce)：在事件被触发n秒后再执行回调，如果在这n秒内又被触发，则重新计时。
+
+```javascript
+/模拟一段ajax请求,只要按下键盘，就会触发这次ajax请求。
+/* ajax函数用来输出传入的参数*/
+function ajax(content) {
+  console.log('ajax request ' + content)
+}
+/* 通过id值获取到DOM标签*/
+let inputa = document.getElementById('unDebounce')
+
+inputa.addEventListener('keyup', function (e) {
+    ajax(e.target.value)
+})
+```
+
+优化后：
+
+```javascript
+/ 延迟执行ajax请求后，当你在频繁的输入时，并不会发送请求，只有当你在指定间隔内没有输入时，才会执行函数/
+/* ajax函数用来输出传入的参数*/
+function ajax(content) {
+  console.log('ajax request ' + content)
+}
+/这里定义一个debounce函数，将传入的函数延迟5秒执行，如果间隔小于5秒，就会重新计时/
+function debounce(fun, delay) {
+    return function (args) {
+        let that = this
+        let _args = args
+        clearTimeout(fun.id)
+        fun.id = setTimeout(function () {
+            fun.call(that, _args)
+        }, delay)
+    }
+}
+/* 通过id值获取到DOM标签*/    
+let inputb = document.getElementById('debounce');
+/这是个函数，是debounce返回的函数/
+let debounceAjax = debounce(ajax, 500)
+/* 添加监听键盘抬起事件，每次弹起就执行后面的回调函数，即将输入内容传值给debounceAjax函数延迟执行ajax*/
+inputb.addEventListener('keyup', function (e) {
+        debounceAjax(e.target.value)
+})
+```
+
+函数节流：如果在延迟的时间间隔内执行函数，会重新触发计时。
