--- a/_posts/2019-08-03-工作遇到的问题小结.md
+++ b/_posts/2019-08-03-工作遇到的问题小结.md
@@ -855,6 +855,9 @@ filters:{
 ```
 
 **注意**：全局注册时是`filter`，没有s的。而组件过滤器是`filters`，是有s的，否则过滤器是没有效果的。
+
+注册在局部的时候，一定**不要写在methods里面**，filter是一个与methods同级的，类似钩子一样的函数。
+
 3.在**计算属性中过滤**：
 
 ```html
@@ -1073,4 +1076,223 @@ inputb.addEventListener('keyup', function (e) {
 })
 ```
 
-函数节流：如果在延迟的时间间隔内执行函数，会重新触发计时。
+**函数节流**：规定在一个单位时间内，只能触发一次函数。**如果这个单位时间内触发多次函数，只有一次生效。**
+
+```javascript
+let biu = function () {
+    console.log('biu biu biu',new Date().Format('HH:mm:ss'))
+}
+setInterval(debounce(biu,500),1000)
+/*biu这个函数在第一次1.5s后执行，然后每隔1s执行一次*/
+
+let boom = function () {
+    console.log('boom boom boom',new Date().Format('HH:mm:ss'))
+}
+setInterval(debounce(boom,2000),1000)
+/*boom这个函数，一次都不会执行，函数执行事件是1s，但是函数间隔2s才会执行，每次2s还没到，就重新计时了*/
+```
+
+优化后
+
+```javascript
+    /在不断输入时，ajax会按照我们设定的时间，每1s执行一次
+	function throttle(fun, delay) {
+        let last, deferTimer
+        return function (args) {
+            let that = this
+            let _args = arguments
+            let now = +new Date()
+            if (last && now < last + delay) {
+                clearTimeout(deferTimer)
+                deferTimer = setTimeout(function () {
+                    last = now
+                    fun.apply(that, _args)
+                }, delay)
+            }else {
+                /如果现在=上一次的时间+延迟时间，那么就马上执行fun函数
+                last = now
+                fun.apply(that,_args)
+            }
+        }
+    }
+
+	/*throttleAjax是个函数，*/
+    let throttleAjax = throttle(ajax, 1000);
+
+	/* 获取当前的DOM元素，并添加键盘抬起的监听事件，每次抬起就调用函数throttleAjax*/
+    let inputc = document.getElementById('throttle')
+    inputc.addEventListener('keyup', function(e) {
+        throttleAjax(e.target.value)
+    });
+
+	/不管我们设定的执行时间间隔多小，总是1s内只执行一次。
+	let biubiu = function () {
+        console.log('biu biu biu', new Date().Format('HH:mm:ss'))
+    };
+    setInterval(throttle(biubiu,1000),10);
+```
+
+总结：函数防抖，类似法师技能读条，还没读完条再按技能，就会重新读条，但是会出现一直读条不能放技能的状况；函数节流，就是一直按着技能键，也能在规定时间内发技能。
+
+- 函数防抖和函数节流都是防止某一时间频繁触发，但是这两兄弟之间的原理却不一样。
+- 函数防抖是某一段时间内只执行一次，而函数节流是间隔时间执行。
+
+- debounce
+  - search搜索联想，用户在不断输入值时，用防抖来节约请求资源。
+  - window触发resize的时候，不断的调整浏览器窗口大小会不断的触发这个事件，用防抖来让其只触发一次
+- throttle
+  - 鼠标不断点击触发，mousedown(单位时间内只触发一次)
+  - 监听滚动事件，比如是否滑到底部自动加载更多，用throttle来判断
+
+### 9.watch的使用
+
+1.监听到变化，**执行方法**：
+
+```javascript
+watch: {    cityName(newName, oldName) {      / .../    } 
+```
+
+2.监听到变化，**改变变量值**：
+
+```javascript
+watch: {    cityName: 'nameChange'    } } 
+```
+
+3.这样使用watch时有一个特点，就是**当值第一次绑定的时候，不会执行监听函数，只有值发生改变才会执行**。
+
+如果我们需要在最初绑定值的时候也执行函数，则就需要用到**`immediate`属性**。
+
+比如当父组件向子组件动态传值时，子组件props首次获取到父组件传来的默认值时，也需要执行函数，此时就需要将`immediate`设为true。
+
+`immediate`表示在watch中首次绑定的时候，是否执行handler，**值为true则表示在watch中声明的时候，就立即执行handler方法**，值为false，则和一般使用watch一样，在数据发生变化的时候才执行handler。
+
+```javascript
+watch: {    
+    cityName: {    　　
+        handler(newName, oldName) {      　　/ .../    　　},
+    　　immediate: true    
+    }  
+} 
+```
+
+4.当需要监听一个对象的改变时，普通的watch方法**无法监听到对象内部属性的改变**，只有data中的数据才能够监听到变化，此时就需要deep属性对对象进行**深度监听**。
+
+```javascript
+watch: {
+    cityName: {      
+        handler(newName, oldName) {      / .../    },
+        deep: true,    
+        immediate: true    
+    }  
+} 
+```
+
+设置`deep: true` 则可以监听到`cityName.name`的变化，此时会**给cityName的所有属性都加上这个监听器**，当对象属性较多时，**每个属性值的变化都会执行handler**。
+
+如果只需要监听对象中的一个属性值，则可以做以下优化：
+
+```javascript
+//使用字符串的形式监听对象属性：
+watch: {
+    'cityName.name': {      
+        handler(newName, oldName) {      / ../      },
+      	deep: true,      
+        immediate: true    
+    }  
+}
+```
+
+### 10.el-cascader中获取选中的内容
+
+在级联中，我要获得级联显示的内容，但是直接通过`v-model`、`:value`来绑定值，得到的是一个`[295,343,323]`，对应着dictionaryId值，但是我**想要的是label里面的值**，在官方文档里面没有提供获取label值的直接方法，所以要自己写。 
+
+首先，级联在html中是：
+
+```html
+<!-- 三级级联 -->                  
+<el-cascader                    
+             ref="Address"                    
+             :options="clubLists"                    
+             :props="props"                    
+             v-model="addressValue"                    
+             @change="handleareaChange"                    
+             style="width:350px"                    
+             clearable                  
+             ></el-cascader> 
+```
+
+其中，`clubLists`是通过接口获得到的级联的显示的数据，
+
+```javascript
+//级联学校列表    
+async getClubLists() {      
+    var res = await getArea();      
+    if (res.code === "success") {        
+        this.clubLists = res.data;      
+    }    
+},
+```
+
+`props`是级联数据中自定义的数据列表
+
+```javascript
+data:{
+props: {        
+    value: "dictionaryId",        
+        label: "value",        
+            children: "childDomain"      }；
+}
+```
+
+`addressValue`是通过v-model绑定的选择的内容**（选中的dictionaryId值）**；
+`handleareaChange`是**更改选择后会触发的方法**；
+
+```javascript
+handleareaChange() {      
+    this.vals = this.getCascaderObj(this.addressValue, this.clubLists);    
+},
+```
+
+ 这里调用了一个获取内容的方法`getCascaderObj`，选择变化之后，vals里面的值也会变化，将绑定的选中的id值和数据源传入该方法；
+
+```javascript
+// 获取级联中的内容    
+getCascaderObj(val, opt) {      
+    return val.map(function(value, index, array) {        
+        for (var itm of opt) {          
+            if (itm.dictionaryId == value) {            
+                opt = itm.childDomain;            
+                return itm;          
+            }        
+        }        
+        return null;      
+    });    
+},  
+```
+
+其中，传入的参数：`value`代表的是**当前选中的id值**，`index`表示的是**当前id值在选中的数组中的序号**，`array`代表了选中的三项的id数组，在opt遍历的itm表示**数据源中的数据**，如下图。
+
+![1566655598049](/img/assets_2019/1566655598049.png)
+
+通过`getCascaderObj`方法得到的vals数组是一个包含了源数组中id值的部分，所以要单独获得每一个选择的内容的话，要通过数组：` this.vals[0].value；this.vals[1].value；this.vals[2].value`
+
+![1566655586000](/img/assets_2019/1566655586000.png)
+
+### 11.获取cookie中的登录id
+
+```javascript
+let login =this.getCookie("login");     
+if (login) {        
+    //获取登陆信息         
+    let loginInfo = this.getLocalValue("loginInfo");        
+    // 和上面方法一样
+    let loginInfo =JSON.parse(localStorage.getItem("loginInfo"));        
+    //获取成员id         
+    let memberId=loginInfo.id;        
+    // 调用接口查询是否重复签到        
+    console.log(memberId);
+```
+
+
+
+​     
