--- a/_posts/2019-07-31-微信小程序的学习.md
+++ b/_posts/2019-07-31-微信小程序的学习.md
@@ -778,3 +778,34 @@ PickerChange(e) {
   	},
 ```
 
+### 17.`wx.navigateTo`跳转不了
+
+错误排查：
+
+1.`app.json`文件中注册检查
+
+2.跳转的`url`地址和目录层级
+3.跳转到的页面是非`tabBar`的页面吗？如果是`tabBar`页面，那么`wx.navigateTo`/`wx.redirectTo`只能用在非`tabBar`页面的跳转，要跳转到`tabBar`页面，需要使用`wx.switchTab`
+
+实现的代码：
+
+```javascript
+// 点击发布后跳转回首页
+  goToIndex() {
+    wx.switchTab({
+      url: '../index/index'
+    })
+  },
+```
+
+```javascript
+//设置了延迟
+goToIndex() {
+    setTimeout(function () {
+      wx.switchTab({
+        url: '../index/index',
+      })
+    }, 800)
+  },
+```
+
