--- a/_posts/2019-08-03-工作遇到的问题小结.md
+++ b/_posts/2019-08-03-工作遇到的问题小结.md
@@ -1285,7 +1285,7 @@ let login =this.getCookie("login");
 if (login) {        
     //获取登陆信息         
     let loginInfo = this.getLocalValue("loginInfo");        
-    // 和上面方法一样
+    // 和上面方法一样，反序列化，把字符串改成对象
     let loginInfo =JSON.parse(localStorage.getItem("loginInfo"));        
     //获取成员id         
     let memberId=loginInfo.id;        
